feat: add tag in blog page

--- a/posts/blog/2026-01-20.md
+++ b/posts/blog/2026-01-20.md
@@ -1,25 +1,25 @@
 ---
 title: "GitHub Actions로 외부 프로젝트 통합 배포하기"
 date: "2026-01-20"
+tag: "tech"
+repository: "https://github.com/kimseongyu/kimseongyu.github.io"
 ---
 
-> 내 블로그에 다른 저장소의 프로젝트를 서브 경로로 배포하고 싶다면? GitHub Actions를 활용해 외부 프로젝트를 가져와 빌드하고 통합하는 방법을 알아봅니다.
+> GitHub Actions을 활용해 외부 프로젝트를 가져와 빌드하고 통합하는 방법을 알아봅니다.
 
 ## 개요
 
-이 글에서는 다음을 다룹니다.
-
-- 블로그 빌드 과정 중에 외부 GitHub 저장소의 프로젝트를 가져오는 방법
-- `sed` 명령어로 빌드 설정을 동적으로 수정하여 서브 경로(`basePath`) 문제 해결하기
-- 하나의 GitHub Pages 사이트에 여러 프로젝트를 통합하여 배포하는 파이프라인 구축
+1. 블로그 빌드 과정 중에 외부 GitHub 저장소의 프로젝트를 가져오는 방법
+2. `sed` 명령어로 빌드 설정을 동적으로 수정하여 서브 경로(`basePath`) 문제 해결하기
+3. 하나의 GitHub Pages 사이트에 여러 프로젝트를 통합하여 배포하는 파이프라인 구축
 
 ---
 
 ## 배경
 
-개인 블로그를 운영하다 보면, 별도로 개발한 토이 프로젝트나 데모를 블로그의 하위 경로(예: `/projects/my-demo`)에서 보여주고 싶을 때가 있습니다.
-
-가장 단순한 방법은 프로젝트 코드를 블로그 저장소에 직접 포함시키는 것이지만, 이는 저장소를 무겁게 만들고 프로젝트 관리를 복잡하게 합니다. 대신 **GitHub Actions**를 사용하면 배포 시점에만 외부 프로젝트를 가져와 빌드하고 합칠 수 있어 훨씬 깔끔하게 관리할 수 있습니다.
+개인 블로그를 운영하다 보면, 별도로 개발한 토이 프로젝트나 데모를 블로그의 하위 경로에서 보여주고 싶을 때가 있습니다.  
+단순한 방법은 프로젝트 코드를 블로그 저장소에 직접 포함시키는 것이지만, 이는 저장소를 무겁게 만들고 프로젝트 관리를 복잡하게 합니다.  
+대신 **GitHub Actions**를 사용하면 배포 시점에만 외부 프로젝트를 가져와 빌드하고 합칠 수 있어 훨씬 깔끔하게 관리할 수 있습니다.
 
 ---
 
@@ -62,13 +62,13 @@ jobs:
       - name: Build external project
         run: |
           cd temp-fireworks
-          
+
           # 중요: 정적 내보내기 및 basePath 설정을 동적으로 주입
           sed -i "s/const nextConfig: NextConfig = {/const nextConfig: NextConfig = { output: 'export', basePath: '\/projects\/3d-fireworks-simulation',/" next.config.ts
-          
+
           npm ci
           npm run build
-          
+
           # 빌드 결과물을 메인 블로그의 출력 폴더로 이동
           mkdir -p ../out/projects/3d-fireworks-simulation
           cp -r out/* ../out/projects/3d-fireworks-simulation/
@@ -93,9 +93,3 @@ sed -i "s/찾을문자열/바꿀문자열/" 파일명
 1.  **저장소 분리**: 블로그와 프로젝트 저장소를 독립적으로 관리할 수 있습니다.
 2.  **자동 동기화**: 블로그를 배포할 때마다 외부 프로젝트의 최신 `main` 브랜치 내용을 가져옵니다.
 3.  **유연성**: `sed` 등을 활용해 배포 환경에 맞춰 설정을 자유롭게 변경할 수 있습니다.
-
----
-
-## 결론
-
-GitHub Actions의 유연함을 활용하면 단순히 코드를 배포하는 것을 넘어, 여러 출처의 리소스를 조합하여 하나의 통합된 사이트를 구축할 수 있습니다.
